project/test/semantics/unit/bad/output/Bad61.ty
Error: UnexpectedTypeError: Types do not match.
Expected: A
Actual: B
In expression:
this . element2
In: badTypes: () -> Bool
